add security in alert-service